# covas-plugin-host

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
app/: audio.py  auth.py  config.py  main.py  plugin_loader.py
lib/: Logger.py  Models.py  PluginBase.py  PluginHelper.py  PluginSettingDefinitions.py
tests/: test_audio.py  test_audio_api.py  test_auth.py  test_config.py  test_embeddings.py  test_health.py  test_plugin_loader.py  test_request_timing.py
